@startuml FlashKart_Database_ERD
!theme plain
skinparam linetype ortho
skinparam roundcorner 10
skinparam shadowing false

title FlashKart Database ERD\n(Generated from Flyway Migrations)

' ============================================
' IDENTITY MODULE
' ============================================

entity "users" as users {
    * id : UUID <<PK>>
    --
    * email : VARCHAR(255) <<UNIQUE>>
    * password_hash : VARCHAR(255)
    * status : VARCHAR(30)
    * created_at : TIMESTAMP
    --
    ** Indexes: **
    idx_users_email (email)
}

entity "user_roles" as user_roles {
    * user_id : UUID <<FK>>
    * role : VARCHAR(50)
    --
    ** Constraints: **
    FK: user_id -> users(id)
}

entity "refresh_tokens" as refresh_tokens {
    * id : UUID <<PK>>
    --
    * user_id : UUID <<FK>>
    * token_hash : VARCHAR(64) <<UNIQUE>>
    * issued_at : TIMESTAMP
    * expires_at : TIMESTAMP
    revoked_at : TIMESTAMP
    replaced_by : UUID
    created_by_ip : VARCHAR(64)
    user_agent : VARCHAR(255)
    --
    ** Indexes: **
    idx_refresh_user (user_id)
    uq_refresh_token_hash (token_hash) <<UNIQUE>>
    --
    ** Constraints: **
    FK: user_id -> users(id)
}

' ============================================
' CATALOG MODULE
' ============================================

entity "categories" as categories {
    * id : UUID <<PK>>
    --
    * name : VARCHAR(100) <<UNIQUE>>
    description : VARCHAR(500)
    image_url : VARCHAR(200)
    * active : BOOLEAN
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
    deleted_at : TIMESTAMP
    --
    ** Indexes: **
    idx_categories_active (active) WHERE deleted_at IS NULL
    idx_categories_name (name) WHERE deleted_at IS NULL
}

entity "products" as products {
    * id : UUID <<PK>>
    --
    * name : VARCHAR(200)
    description : TEXT
    * category_id : UUID <<FK>>
    brand : VARCHAR(200)
    image_url : VARCHAR(500)
    * active : BOOLEAN
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
    deleted_at : TIMESTAMP
    --
    ** Indexes: **
    idx_products_category (category_id) WHERE deleted_at IS NULL
    idx_products_active (active) WHERE deleted_at IS NULL
    idx_products_brand (brand) WHERE deleted_at IS NULL
    idx_products_name_search (name) USING gin(to_tsvector('english', name)) WHERE deleted_at IS NULL
    --
    ** Constraints: **
    FK: category_id -> categories(id)
}

entity "skus" as skus {
    * id : UUID <<PK>>
    --
    * product_id : UUID <<FK>>
    * sku_code : VARCHAR(50) <<UNIQUE>>
    variant_name : VARCHAR(200)
    * stock_quantity : INTEGER
    * reserved_quantity : INTEGER
    current_price_id : UUID <<FK>>
    * active : BOOLEAN
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
    deleted_at : TIMESTAMP
    --
    ** Computed: **
    available_quantity = stock_quantity - reserved_quantity
    --
    ** Indexes: **
    idx_skus_product (product_id) WHERE deleted_at IS NULL
    idx_skus_code (sku_code) WHERE deleted_at IS NULL
    idx_skus_active (active) WHERE deleted_at IS NULL
    idx_skus_stock (stock_quantity) WHERE deleted_at IS NULL AND active = true
    --
    ** Constraints: **
    FK: product_id -> products(id)
    FK: current_price_id -> prices(id)
}

entity "prices" as prices {
    * id : UUID <<PK>>
    --
    sku_id : UUID <<FK>>
    * amount : DECIMAL(10,2)
    * currency : VARCHAR(3)
    * version : INTEGER
    * is_current : BOOLEAN
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
    deleted_at : TIMESTAMP
    --
    ** Indexes: **
    idx_prices_sku (sku_id) WHERE deleted_at IS NULL
    idx_prices_current (sku_id, is_current) WHERE deleted_at IS NULL AND is_current = true
    idx_prices_version (sku_id, version) WHERE deleted_at IS NULL
    --
    ** Constraints: **
    FK: sku_id -> skus(id) ON DELETE CASCADE
}

' ============================================
' CART MODULE
' ============================================

entity "carts" as carts {
    * id : UUID <<PK>>
    --
    * user_id : UUID <<FK>>
    * expires_at : TIMESTAMP
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
    deleted_at : TIMESTAMP
    --
    ** Indexes: **
    idx_carts_user (user_id) WHERE deleted_at IS NULL
    idx_carts_expires_at (expires_at) WHERE deleted_at IS NULL
    idx_carts_user_active (user_id) <<UNIQUE>> WHERE deleted_at IS NULL
    --
    ** Constraints: **
    FK: user_id -> users(id) ON DELETE CASCADE
    ** Business Rule: **
    One active cart per user (enforced by unique index)
}

entity "cart_items" as cart_items {
    * id : UUID <<PK>>
    --
    * cart_id : UUID <<FK>>
    * sku_id : UUID <<FK>>
    * quantity : INTEGER
    * created_at : TIMESTAMP
    * updated_at : TIMESTAMP
    deleted_at : TIMESTAMP
    --
    ** Constraints: **
    FK: cart_id -> carts(id) ON DELETE CASCADE
    FK: sku_id -> skus(id)
    CHECK: quantity > 0
    UNIQUE: (cart_id, sku_id) WHERE deleted_at IS NULL
    --
    ** Indexes: **
    idx_cart_items_cart (cart_id) WHERE deleted_at IS NULL
    idx_cart_items_sku (sku_id) WHERE deleted_at IS NULL
}

' ============================================
' RELATIONSHIPS
' ============================================

users ||--o{ user_roles : "has"
users ||--o{ refresh_tokens : "has"
users ||--o{ carts : "owns"

categories ||--o{ products : "contains"

products ||--o{ skus : "has variants"

skus ||--o{ prices : "has price history"
skus ||--o| prices : "current_price"
skus ||--o{ cart_items : "referenced in"

carts ||--o{ cart_items : "contains"

' ============================================
' NOTES
' ============================================

note right of users
    ** Soft Delete: **
    Not implemented (no deleted_at)
    
    ** Status Values: **
    ACTIVE, BLOCKED, INACTIVE
end note

note right of categories
    ** Soft Delete: **
    Uses deleted_at timestamp
    
    ** Indexes: **
    Partial indexes for performance
    (only non-deleted records)
end note

note right of products
    ** Soft Delete: **
    Uses deleted_at timestamp
    
    ** Full-Text Search: **
    GIN index on name for PostgreSQL
    full-text search capabilities
end note

note right of skus
    ** Stock Management: **
    stock_quantity: Total available
    reserved_quantity: Reserved for orders
    available_quantity: Computed (stock - reserved)
end note

note right of prices
    ** Price Versioning: **
    Maintains historical prices
    is_current flag marks active price
    version number for audit trail
end note

note right of carts
    ** Expiry Logic: **
    Carts expire after 30 days
    Scheduled job cleans up expired carts
    Expiry extended on activity
end note

note right of cart_items
    ** Business Rules: **
    One item per SKU per cart
    Quantity must be > 0
    Soft delete on removal
end note

@enduml

